--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "terser": "^5.39.2",
     "vite": "^6.2.0",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-compression2": "^1.3.3"
   }
 }
