--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
     "postcss": "^8.4.45",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
