--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query-devtools": "^5.66.11",
     "@tiptap/extension-color": "^2.11.9",
     "@tiptap/extension-text-align": "^2.11.9",
@@ -20,11 +21,17 @@
     "@tiptap/starter-kit": "^2.11.9",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "blob-stream": "^0.1.3",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.477.0",
+    "pdfkit": "^0.17.1",
+    "pdfkit-table": "^0.1.99",
+    "pdfmake": "^0.2.20",
     "postcss": "^8.4.45",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
